<?xml version="1.0" encoding="UTF-8"?>
<resources>
    <string name="app_label">Psykdup Extras</string>
    <string name="title_display_adb_usb_debugging_notif">ADB notification</string>
    <string name="summary_display_adb_usb_debugging_notif">Display or hide the debugging notification</string>
    <!--<string name="summary_off_display_adb_usb_debugging_notif">Debugging notification will not be displayed</string>-->
    <string name="title_launcher_orientation">Launcher2 orientation</string>
    <string name="summary_on_launcher_orientation">Allow the launcher to rotate</string>
    <string name="summary_off_launcher_orientation">Note: this requires my modded Launcher2.apk to work!!!</string>
    <!--<string name="voicemail_providers">Voicemail defaults</string>
    <string name="summary_voicemail_providers">Edit the default voicemail provider</string>
    <string name="title_vm_uses_carrier">Carrier</string>
    <string name="summary_on_vm_uses_carrier">Carrier defaults are enabled</string>
    <string name="summary_off_vm_uses_carrier">Carrier defaults are disabled</string>
    <string name="title_vm_uses_googlevoice">Google voice</string>
    <string name="summary_on_vm_uses_googlevoice">Google voice defaults are enabled</string>
    <string name="summary_off_vm_uses_googlevoice">Google voice defaults are disabled</string>
    <string name="title_vm_uses_youmail">YouMail</string>
    <string name="summary_on_vm_uses_youmail">Youmail defaults are enabled</string>
    <string name="summary_off_vm_uses_youmail">Youmail defaults are disabled</string>
    <string name="title_vm_uses_verizon">Verizon</string>
    <string name="summary_on_vm_uses_verizon">Verizon vvm defaults are enabled</string>
    <string name="summary_off_vm_uses_verizon">Verizon vvm defaults are disabled</string>-->
    <string name="media_scanner_title">Media scanner</string>
    <string name="media_scanner_summary_on">Enable or disable the media scanner for improved boot times</string>
    <string name="media_scanner_summary_off">Important: to access media files from the SD Card (i.e. Gallery, etc.) you must reenable the media scanner</string>
    <string name="backup_restore_title">Backup/restore</string>
    <string name="backup_restore_summary">Manage clockworkmod recovery on your device</string>
    <string name="recovery_title">Recovery</string>
    <string name="cwm_title">ClockWorkMod recovery</string>
    <string name="cwm_summary">Reboot into recovery mode</string>
    <string name="cwm_backup_title">Create backup</string>
    <string name="cwm_backup_summary">Create a full system backup</string>
    <string name="cwm_restore_title">Restore backup</string>
    <string name="cwm_restore_summary">Restore an existing backup</string>
    <string name="cwm_delete_title">Delete backup</string>
    <string name="cwm_delete_summary">Delete existing backups</string>
    <string name="update_title">CWM package</string>
    <string name="cwm_update_title">Flash CWM package</string>
    <string name="cwm_update_summary">Reboot into recovery and flash selected CWM zip. This can be a kernel, theme or update package!</string>
    <string name="tools_clean_thumbs_title">Clean media thumbnails</string>
    <string name="tools_clean_thumbs_summary">Prevent gallery problems and heavy battery drain</string>
    <string name="title_dpi_setting">Display resolution</string>
    <string name="summary_dpi_setting">Change the display resolution (dpi)</string>
    <string name="confirm_dpi_1">"Do you really want to set density to "</string>
    <string name="confirm_dpi_2">"? This will restart the user interface!"</string>
    <string name="lcd_density">Select desired dpi value</string>
    <string name="cancel">Cancel</string>
    <string name="apply">Apply</string>
    <string name="value">Value</string>
    <string name="low">&lt;&lt;lower</string>
    <string name="high">higher&gt;&gt;</string>
    <string name="reset">Reset</string>
    <string name="ui">User interface</string>
    <string name="perform">Performance</string>
    <string name="recovery">Manage recovery</string>
</resources>
