<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:layout_width="480px" android:layout_height="wrap_content" android:background="#99000000">
	<TextView android:text="@string/lcd_density" android:id="@+id/TextView01" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="20px" android:textSize="30px" android:layout_gravity="center"></TextView>
	<TextView android:layout_width="wrap_content" android:text="@string/value" android:layout_height="wrap_content" android:id="@+id/ValueTV" android:textSize="40px" android:layout_gravity="center_horizontal"></TextView>
	<SeekBar android:id="@+id/SeekBar01" android:layout_width="match_parent" android:max="6" android:progress="6" android:paddingLeft="60px" android:paddingRight="60px" android:layout_marginLeft="20px" android:layout_marginRight="20px" android:layout_marginTop="20px" android:layout_height="50px"></SeekBar>
	<RelativeLayout android:layout_height="wrap_content" android:id="@+id/RelativeLayout01" android:layout_width="match_parent">
		<TextView android:id="@+id/TextViewL" android:layout_alignParentLeft="true" android:layout_height="wrap_content" android:text="@string/low" android:layout_width="wrap_content" android:layout_marginBottom="20px" android:textSize="30px"></TextView>
		<TextView android:id="@+id/TextViewH" android:layout_height="wrap_content" android:layout_alignParentRight="true" android:text="@string/high" android:layout_width="wrap_content" android:textSize="30px"></TextView>
		<Button android:text="@string/apply" android:layout_below="@+id/TextViewL" android:layout_alignParentLeft="true" android:layout_height="wrap_content" android:id="@+id/Button01" android:layout_width="150px" android:layout_marginLeft="80px"></Button>
		<Button android:text="@string/reset" android:layout_below="@+id/TextViewL" android:layout_alignParentRight="true" android:layout_height="wrap_content" android:id="@+id/Button02" android:layout_width="150px" android:layout_marginRight="80px"></Button>
	</RelativeLayout>
</LinearLayout>
